midpoint-live-demo/objects/tomcat/tomcat.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tomcat
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tomcat
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: nfs-volume
          nfs:
            server: nfs-service.mp-demo.svc.cluster.local
            path: /
      containers:
        - name: tomcat
          image: 'tomcat:10-jdk11-corretto'
          ports:
            - name: tomcat-port
              containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: shared-data
              mountPath: /usr/local/tomcat/webapps-javaee/
            - name: nfs-volume
              mountPath: /var/opt/
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  serviceName: addressbook-tomcat-service
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
