midpoint-live-demo/objects/tomcat/tomcat-hr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-hr-ingress
  
spec:
  tls:
    - hosts:
        - demo.example.com
      secretName: cert-mp-demo
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /hr
            pathType: Prefix
            backend:
              service:
                name: tomcat-service
                port:
                  name: tomcat-port
